2009-07-03 Josh Kropf <josh@slashdev.ca>

   * docs.txt: update documentation for <entry> element to make it clear
     that this element is a nested element of the <jdp> element.


2009-07-02 Josh Kropf <josh@slashdev.ca>

   * ApplicationType.java: Ensure destination directory for cod files is
     always set to avoid cod files being copied to current working directory
     by the <alx> task.


2009-03-11 Josh Kropf <josh@slashdev.ca>

   * ApplicationType.java: Neil Sainsbury's fixes to .alx file generation


2009-02-15 Josh Kropf <josh@slashdev.ca>

    * OverrideType.java: new type, basic key/value pair model
    * JadtoolTask.java (overrides): nested parameters of type OverrideType
      (executeRewrite): override jad fields selected by user


2009-02-10 Josh Kropf <josh@slashdev.ca>

   * Merged Jeremy Wall's bug fixes and enhancements
   * ApplicationType.java: added version match properties to application tag
     (generate): apply version match to both codSet and application tags
     (generate): always include name,description,version,vendor,copyright
     tags even if the contents is empty
   * CodSetType.java (VersionMatch): removed package local class
     (getVersionMatch): fixed version match string to use correct order of
     square bracket and parentheses for inclusive and exclusive versions
   * EntryPointType.java: added if and unless attributes
   * JdpType.java (writeManifest): conditionally include alternate entry points
   * Utils.java (getSHA1): pad hex byte with zero if less than two chars long
   * VersionMatch.java: moved from package local class to public class


2009-01-18 Josh Kropf <josh@slashdev.ca>

    * JadtoolTask.java (executeRewrite): fixed bug that would generate .jad
      file with all RIM-COD-* properties to end with 1
    * RapcTask.java (execute): added feature to expand directories listed
      in the nested source path tags, eg: <src path="dir1;dir2" />


2009-01-09 Josh Kropf <josh@slashdev.ca>
